--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,13 @@
 	<link rel="icon" type="image/x-icon" href="#"> <!--FAVICON-->
 	<script src="javascript.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0;">
+	<style>
+		
+		.pictureframe {
+			border-radius: 100%;
+		}
+		
+	</style>
 </head>
 	
 	
