--- a/finnishdesigners.html
+++ b/finnishdesigners.html
@@ -34,7 +34,7 @@
 <!--NAVIGAATIO-->
 	
 	<header>
-		<div class="navbar">
+		<div class="navbar darkmode">
 			<a class="logo-container" href="index.html">Miro Eskelinen</a>
 			<input id="menu-toggle" type="checkbox"/>
 			<label class="hamburger-container" for="menu-toggle">
@@ -52,7 +52,7 @@
 	
 <!--HERO-->	
 	
-	<div class="hero" style="background-color: var(--finnishdesigners-background)">
+	<div class="hero darkmode" style="background-color: var(--finnishdesigners-background)">
 		<div class="content-field first">
 			<div class="column reversed">
 				<div class="content-field">
@@ -84,8 +84,10 @@
 						<a class="button secondarybutton" href="uxui.html">Back</a>
 					</div>
 				</div>
-				<div class="content-field">
-					<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners" style="max-height: 80vh">
+				<div class="content-field" style="align-items: flex-end">
+					<div class="pictureframe" style="background-color: var(--white-superlight); max-width: 85%; margin-right: 15px;">
+						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
+					</div>
 				</div>
 			</div>
 		</div>
@@ -136,7 +138,7 @@
 		</div>
 	</div>
 	
-	<div class="hero">
+	<div class="hero darkmode">
 		<div class="content-field" id="anchor">
 			<div class="column">
 				<div class="content-field">
