--- a/uxui.html
+++ b/uxui.html
@@ -40,45 +40,39 @@
 	<div class="content-field first">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
-			<a class="card" href="vuorox.html" >
+			<a class="card darkmode" href="vuorox.html" style="background-color: var(--vuorox-background)">
 				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--vuorox-secondary);">
+					<div class="pictureframe" style="background-color: var(--white-superlight);">
 						<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox">
 					</div>
 				</div>
 				<div class="content-field">
 					<h2>Vuorox</h2>
-					<p>An app where nurses can check their work shifts and manage them.</p>
-					<div class="button">View project</div>
+					<p>An app where nurses can check and manage their work shifts.</p>
 				</div>
 			</a>
-			<a class="card" href="finnishdesigners.html">
+			<a class="card darkmode" href="finnishdesigners.html" style="background-color: var(--finnishdesigners-background)">
 				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--finnishdesigners-background);">
+					<div class="pictureframe" style="background-color: var(--white-superlight);">
 						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
 					</div>
 				</div>
 				<div class="content-field">
 					<h2>Finnish Designers</h2>
 					<p>Portfolio platform and community for finnish designers.</p>
-					<div class="button">View project</div>
 				</div>
 			</a>
-		</div>
-		<div class="column">
-			<a class="card" href="lekatech.html">
+			<a class="card darkmode" href="lekatech.html" style="background-color: var(--lekatech-background)">
 				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--lekatech-background);">
+					<div class="pictureframe" style="background-color: var(--white-superlight);">
 						<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
 					</div>
 				</div>
 				<div class="content-field">
 					<h2>Lekatech</h2>
 					<p>UI for remote control electric breaker hammer.</p>
-					<div class="button">View project</div>
 				</div>
 			</a>
-			<div class="content-field"></div>
 		</div>
 	</div>
 	
