--- a/vuorox.html
+++ b/vuorox.html
@@ -19,7 +19,7 @@
 		}
 		
 		.darkmode {
-			background-color: var(--vuorox-secondary)
+			background-color: var(--vuorox-background)
 		}
 		
 	</style>
@@ -82,8 +82,10 @@
 						<a class="button secondarybutton" href="uxui.html">Back</a>
 					</div>
 				</div>
-				<div class="content-field">
-					<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox" style="max-height: 80vh">
+				<div class="content-field" style="align-items: flex-end">
+					<div class="pictureframe" style="background-color: var(--white-superlight); max-width: 85%; margin-right: 15px;">
+						<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox">
+					</div>
 				</div>
 			</div>
 		</div>
