--- a/lekatech.html
+++ b/lekatech.html
@@ -80,8 +80,10 @@
 						<a class="button secondarybutton" href="uxui.html">Back</a>
 					</div>
 				</div>
-				<div class="content-field">
-					<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
+				<div class="content-field" style="align-items: flex-end">
+					<div class="pictureframe" style="background-color: var(--white-superlight); max-width: 85%; margin-right: 15px;">
+						<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
+					</div>
 				</div>
 			</div>
 		</div>
