--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 <!--NAVIGAATIO-->
 	
 	<header>
-		<div class="navbar">
+		<div class="navbar darkmode">
 			<a class="logo-container" href="index.html">Miro Eskelinen</a>
 			<input id="menu-toggle" type="checkbox"/>
 			<label class="hamburger-container" for="menu-toggle">
 				<div class="hamburger"></div>
 			</label>
 			<div class="menu">
+				<a class="menubutton" href="index.html #anchor">About&nbsp;me</a>
 				<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
 				<a class="menubutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
-				<a class="menubutton" href="aboutme.html">About&nbsp;me</a>
 			</div>
 		</div>
 	</header>
@@ -37,21 +37,72 @@
 	
 <!--HERO-->	
 	
-	<div class="content-field first" style="min-height: calc(100vh - 125px);">
-		<div class="column reversed">
-			<div class="content-field" style="margin-top: 40px;">
-				<h1>I'm Miro, graphic and UX &amp; UI designer!</h1>
-				<p>Welcome to my portfolio! I'm a soon-to-graduate UX &amp; UI Design student from LAB Institute of Design in Lahti, who has also studied and worked as graphic designer.</p>
-				<div class="buttonsection">
-					<a class="button" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
-					<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
+	<div class="hero darkmode" style="background-color: #044040">
+		<div class="content-field first">
+			<div class="column reversed">
+				<div class="content-field" style="margin-top: 40px;">
+					<h1>I'm Miro, graphic and UX &amp; UI designer!</h1>
+					<p>Welcome to my portfolio! I'm a soon-to-graduate UX &amp; UI Design student from LAB Institute of Design in Lahti, who has also studied and worked as graphic designer.</p>
+					<div class="buttonsection">
+						<a class="button" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
+						<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
+					</div>
+				</div>
+				<div class="content-field" style="align-items: flex-end;">
+					<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 85%; margin-right: 15px;">
 				</div>
 			</div>
-			<div class="content-field" style="align-items: flex-end;">
-				<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 85%; margin-right: 15px;">
+		</div>
+	</div>
+	<div class="content-field" id="anchor">
+		<div class="column">
+			<div class="content-field" style="width: 300px;">
+				<div class="pictureframe" style="background-color: var(--primary); margin-top: 30px;">
+					<img src="Liitteet/Aboutmekuva-edited.png" alt="Picture of me">
+				</div>
+			</div>
+			<div class="content-field">
+				<h1>About Me</h1>
+				<p>I have originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, area of expertise being graphic design. I have worked in an advertising agency, a web design agency and as a freelancer. Through out years I have become more interested in functionality of things than just their aesthetics and this has steadily lead me to the world of UX &amp; UI. That and an irritation towards many illogical or needlessly complex user interfaces we encounter every day and thinking how I would change them.<br>
+				<br>
+				In 2021 I began to study UX &amp; UI in Design Institute of LAB University of Applied Sciences. I aim to move into that field of work more in the future although so far I feel like UX &amp; UI education has helped me to become better graphic designer as well. I am very much a team player and having working history in customer service and sales jobs helps me with communication and pitching ideas with customers and team members alike. I also have interest towards game design and illustration.</p>
+				<h2>Skills</h2>
+				<div class="column" style="max-width: 600px;">
+					<div class="content-field">
+						<h3>Essentials</h3>
+						<p>UI Design<br>
+						UX Design<br>
+						Graphic Design<br>
+						Usability testing<br>
+						User research<br>
+						Accessibility evalutation<br>
+						Wireframing<br>
+						Prototyping<br>
+						Design systems<br>
+						HTML &amp; CSS<br>
+						Website maintenance<br></p>
+					</div>
+					<div class="content-field">
+						<h3>Tools</h3>
+						<p>Figma<br>
+						Adobe Indesign<br>
+						Adobe Illustrator<br>
+						Adobe Photoshop<br>
+						Adobe XD<br>
+						Wordpress<br>
+						Office 365<br></p>
+					</div>
+					<div class="content-field">
+						<h3>Other</h3>
+						<p>Illustration<br>
+						3D Modeling<br>
+						Sales<br>
+						Customer service</p>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>	
+    </div>
 	
 
 <!--FOOTER-->
