--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -26,9 +26,9 @@
 				<div class="hamburger"></div>
 			</label>
 			<div class="menu">
+				<a class="menubutton" href="index.html #anchor">About&nbsp;me</a>
 				<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
 				<a class="menubutton current" href="graphicdesign.html">Graphic&nbsp;Design</a>
-				<a class="menubutton" href="aboutme.html">About&nbsp;me</a>
 			</div>
 		</div>
 	</header>
