--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="hamburger"></div>
 			</label>
 			<div class="menu">
-				<a class="menubutton" href="index.html#anchor">About&nbsp;me</a>
+				<a class="menubutton" href="index.html#aboutme">About&nbsp;me</a>
 				<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
 				<a class="menubutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
 			</div>
@@ -54,7 +54,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="content-field" id="anchor">
+	<div class="content-field" id="aboutme">
 		<div class="column">
 			<div class="content-field" style="width: 300px;">
 				<div class="pictureframe" style="background-color: var(--primary); margin-top: 30px;">
