--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 				<div class="content-field" style="align-items: flex-end;">
-					<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 85%; margin-right: 15px;">
+					<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 85%; margin-right: 15px; margin-bottom: 20px;">
 				</div>
 			</div>
 		</div>
