--- a/uxui.html
+++ b/uxui.html
@@ -51,7 +51,7 @@
 					<p>An app where nurses can check and manage their work shifts.</p>
 				</div>
 			</a>
-			<a class="card darkmode" href="finnishdesigners.html" style="background-color: var(--finnishdesigners-background)">
+			<a class="card darkmode" href="finnishdesigners.html" style="background-color: var(--finnishdesigners-background);">
 				<div class="content-field">
 					<div class="pictureframe" style="background-color: var(--white-superlight);">
 						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
@@ -62,7 +62,9 @@
 					<p>Portfolio platform and community for finnish designers.</p>
 				</div>
 			</a>
-			<a class="card darkmode" href="lekatech.html" style="background-color: var(--lekatech-background)">
+		</div>
+		<div class="column">
+			<a class="card darkmode" href="lekatech.html" style="background-color: var(--lekatech-background);">
 				<div class="content-field">
 					<div class="pictureframe" style="background-color: var(--white-superlight);">
 						<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
@@ -73,6 +75,7 @@
 					<p>UI for remote control electric breaker hammer.</p>
 				</div>
 			</a>
+			<div class="content-field"></div>
 		</div>
 	</div>
 	
