--- a/finnishdesigners.html
+++ b/finnishdesigners.html
@@ -18,7 +18,7 @@
 			color: var(--white-light);
 		}
 		
-		.hero {
+		.darkmode {
 			background-color: var(--finnishdesigners-background)
 		}
 		
@@ -91,52 +91,64 @@
 				</div>
 			</div>
 		</div>
+		<svg class="svg">
+		  <clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clippath>
+		</svg>
+		<div class="divider"></div>
     </div>
 
 	
 	
 <!--BODY-->
-	<div  class="content-field">
-		<div class="column">
-			<div class="content-field">
-				<h2>Problem</h2>
-				<p>Customer provided us user research data from questionaires and interviews from which we started to define the problem with the current website and user personas based on most common user types and their goals.</p>
-				<h3>Pain points related to the search engine</h3>
-				<ul>
-					<li>Insufficient search options</li>
-					<li>Irrelevant search results</li>
-					<li>Many portfolios were not up to date</li>
-				</ul>
-				<h3>User personas</h3>
-				<ul>
-					<li>Junior: a newbie designer, usually straight out of school, main goals are finding a job and networking.</li>
-					<li>Veteran: an experienced designer who seeks to be part of community and affirm their status as a designer</li>
-					<li>Employer: Goal is to find a suitable worker quickly</li>
-				</ul>
-				<h3>Finnish Designers' competition advantage</h3>
-				<p>Finnish Designers is a platfrom containing solely qualified designers because there is an application process for registeration, only designers with proper education or work experience can join. This makes it easy for employer to find suitable worker compared to other services such as Oikopolku or Duunitori that are not focused on designers nor check the qualifications of applicants. However, to make Finnish Designers attractive to employers, browsing through the website and especially the search engine needs to work seamlessly.</p>
+	
+	<div class="hero">
+		<div  class="content-field">
+			<div class="column">
+				<div class="content-field">
+					<h2>Problem</h2>
+					<p>Customer provided us user research data from questionaires and interviews from which we started to define the problem with the current website and user personas based on most common user types and their goals.</p>
+					<h3>Pain points related to the search engine</h3>
+					<ul>
+						<li>Insufficient search options</li>
+						<li>Irrelevant search results</li>
+						<li>Many portfolios were not up to date</li>
+					</ul>
+					<h3>User personas</h3>
+					<ul>
+						<li>Junior: a newbie designer, usually straight out of school, main goals are finding a job and networking.</li>
+						<li>Veteran: an experienced designer who seeks to be part of community and affirm their status as a designer</li>
+						<li>Employer: Goal is to find a suitable worker quickly</li>
+					</ul>
+					<h3>Finnish Designers' competition advantage</h3>
+					<p>Finnish Designers is a platfrom containing solely qualified designers because there is an application process for registeration, only designers with proper education or work experience can join. This makes it easy for employer to find suitable worker compared to other services such as Oikopolku or Duunitori that are not focused on designers nor check the qualifications of applicants. However, to make Finnish Designers attractive to employers, browsing through the website and especially the search engine needs to work seamlessly.</p>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="content-field">
-		<div class="column">
-			<div class="content-field">
-				<h2>Solution</h2>
-				<p>After recognizing the pain points and making the personas, we started to define the backbone of the user experience, design drivers and user flows. We made the user flows from point of view of the employer and the designer. After that I proceeded to prototyping the search engine.</p>
-				<h3>Design Drivers</h3>
-				<ul>
-					<li>Efficiency: fast and effortless to use</li>
-					<li>Sense of community and support: the platform helps and guides, interaction with other users</li>
-					<li>Personality: designer's personality and handprint can be easily seen from portfolio</li>
-					<li>Inspirational: user gets a perception of the design field and it's diversity</li>
-				</ul>
-			</div>
-			<div class="content-field">
-				<img src="Liitteet/Finnishdesigners/Vuo-kaavio-jasen.png" alt="Designer user flow">
-				<img src="Liitteet/Finnishdesigners/Vuo-kaavio-tyonantaja.png" alt="Employer user flow">
+		<div class="content-field">
+			<div class="column">
+				<div class="content-field">
+					<h2>Solution</h2>
+					<p>After recognizing the pain points and making the personas, we started to define the backbone of the user experience, design drivers and user flows. We made the user flows from point of view of the employer and the designer. After that I proceeded to prototyping the search engine.</p>
+					<h3>Design Drivers</h3>
+					<ul>
+						<li>Efficiency: fast and effortless to use</li>
+						<li>Sense of community and support: the platform helps and guides, interaction with other users</li>
+						<li>Personality: designer's personality and handprint can be easily seen from portfolio</li>
+						<li>Inspirational: user gets a perception of the design field and it's diversity</li>
+					</ul>
+				</div>
+				<div class="content-field">
+					<img src="Liitteet/Finnishdesigners/Vuo-kaavio-jasen.png" alt="Designer user flow">
+					<img src="Liitteet/Finnishdesigners/Vuo-kaavio-tyonantaja.png" alt="Employer user flow">
+				</div>
 			</div>
 		</div>
+		<div class="divider" style="background-color: var(--finnishdesigners-background)"></div>
 	</div>
+	
+	
+	
+<!-- UI -->
 	
 	<div class="hero darkmode">
 		<div class="content-field" id="anchor">
