--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -19,7 +19,7 @@
 <!--NAVIGAATIO-->
 	
 	<header>
-		<div class="navbar">
+		<div class="navbar darkmode">
 			<a class="logo-container" href="index.html">Miro Eskelinen</a>
 			<input id="menu-toggle" type="checkbox"/>
 			<label class="hamburger-container" for="menu-toggle">
@@ -37,10 +37,15 @@
 	
 <!--BODY-->	
 	
-
-	<div class="content-field first">
-		<h1>Graphic design</h1>
-		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
+	<div class="hero darkmode" style="background-color: var(--primary)">
+		<div class="content-field first">
+			<h1>Graphic design</h1>
+			<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
+		</div>
+		<svg class="svg">
+		  <clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clippath>
+		</svg>
+		<div class="divider"></div>
 	</div>
 	<div class="content-field">
 		<div class="column">
