--- a/index.html
+++ b/index.html
@@ -49,10 +49,14 @@
 					</div>
 				</div>
 				<div class="content-field" style="align-items: flex-end;">
-					<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 85%; margin-right: 15px; margin-bottom: 20px;">
+					<img src="Liitteet/Portfoliokuva-kehyksella.png" alt="Portfoliopicture" style="width: 75%; margin-right: 15px;">
 				</div>
 			</div>
 		</div>
+		<svg class="svg">
+		  <clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clippath>
+		</svg>
+		<div class="divider"></div>
 	</div>
 	<div class="content-field" id="aboutme">
 		<div class="column">
