--- a/lekatech.html
+++ b/lekatech.html
@@ -87,57 +87,64 @@
 				</div>
 			</div>
 		</div>
+		<svg class="svg">
+		  <clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clippath>
+		</svg>
+		<div class="divider"></div>
     </div>
 
 	
 	
 <!--BODY-->
 
-	<div class="content-field">
-		<div class="column">
-			<div class="content-field">
-				<h2>Assignment</h2>
-				<p>Assignment for our entire team was to come up with <b>two hammer concepts</b> and <b>two hammer UI concepts.</b> The hammer-team and the UI-team worked mostly separately but with constant check ups and critiques with each other. Names of the finnished hammer concepts were Agitator M3 and GranitE3.</p>
-				<h3>Basic info about the breaker hammers</h3>
-				<p>Breaker hammers are used in excavators. Earlier the only breaker hammers in the market were hydraulic hammers so electric hammers were a new invention. With both hammers the hammering starts when user presses a pedal with their foot. The difference is that electric hammer can be controlled via <b>touchscreen device (device where we made the UI for)</b> on the excavator so that the impact energy and the frequency of hammering can be changed. This makes hammering throught different kinds of materials easier.</p>
-				<h3>UI Concepts</h3>
-				<p>One UI concept was not specifically linked to one hammer concept but rather we made one "conservative" UI close to customers pre-existing drafts and the other was more futuristic with more liberties in execution. We ended up calling the conservative UI <b>Enhanced</b> and the futuristic one <b>Innovative</b>. When prototyping these concepts, <b>I was responsible for the Innovative UI</b> so I only have deeper dive to that concept in this page.</p>
+	<div class="hero">
+		<div class="content-field">
+			<div class="column">
+				<div class="content-field">
+					<h2>Assignment</h2>
+					<p>Assignment for our entire team was to come up with <b>two hammer concepts</b> and <b>two hammer UI concepts.</b> The hammer-team and the UI-team worked mostly separately but with constant check ups and critiques with each other. Names of the finnished hammer concepts were Agitator M3 and GranitE3.</p>
+					<h3>Basic info about the breaker hammers</h3>
+					<p>Breaker hammers are used in excavators. Earlier the only breaker hammers in the market were hydraulic hammers so electric hammers were a new invention. With both hammers the hammering starts when user presses a pedal with their foot. The difference is that electric hammer can be controlled via <b>touchscreen device (device where we made the UI for)</b> on the excavator so that the impact energy and the frequency of hammering can be changed. This makes hammering throught different kinds of materials easier.</p>
+					<h3>UI Concepts</h3>
+					<p>One UI concept was not specifically linked to one hammer concept but rather we made one "conservative" UI close to customers pre-existing drafts and the other was more futuristic with more liberties in execution. We ended up calling the conservative UI <b>Enhanced</b> and the futuristic one <b>Innovative</b>. When prototyping these concepts, <b>I was responsible for the Innovative UI</b> so I only have deeper dive to that concept in this page.</p>
+				</div>
+				<div class="content-field">
+					<div class="column">
+						<div class="content-field" style="align-items: center;">
+							<h3>The hammer (GranitE3 version)</h3>
+							<img src="Liitteet/Lekatech/Granite.png" alt="GranitE3" style="max-height: 65vh;">
+						</div>
+						<div class="content-field" style="align-items: center;">
+							<h3 style="color: var(--text-light);">The device UI is used</h3>
+							<img src="Liitteet/Lekatech/Device-Home.png" alt="Device" style="max-height: 65vh;">
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="content-field">
+		</div>
+		<div class="content-field">
+			<div class="column">
+				<div class="content-field">
+					<h2>Process</h2>
+					<p>We started by studying all the key functions of the hammers and the environment UI was used on (excavator cabin). Not much user research was possible since the electric hammers didn’t exist on the market yet and therefore there were no pre-existing users and the project was confidential so we couldn’t share any information about it. We did manage to get some information from construction workers about hammering related things.</p>
+					<h3>Findings</h3>
+					<p style="margin-bottom: 0;">Excavator drivers often wear gloves, sometimes work in dark and the hammering is a pretty straight-forward routine procedure. That meant that the UI needed to...</p>
+					<ul>
+						<li>be visually clear and perceicable by one glance, easy to bring in to use</li>
+						<li>require mimimal clicks and be usable with gloves on</li>
+						<li>have dim colours so light of the screen won't dazzle the user</li>
+					</ul>
+					<h3>Prototyping</h3>
+					<p>The prototyping process was iterative, we made some wireframes first and then showed them to the customer, re-developed the necessary parts and then showed an updated version until the final UI was ready.</p>
+				</div>
 				<div class="column">
 					<div class="content-field" style="align-items: center;">
-						<h3>The hammer (GranitE3 version)</h3>
-						<img src="Liitteet/Lekatech/Granite.png" alt="GranitE3" style="max-height: 65vh;">
-					</div>
-					<div class="content-field" style="align-items: center;">
-						<h3 style="color: var(--text-light);">The device UI is used</h3>
-						<img src="Liitteet/Lekatech/Device-Home.png" alt="Device" style="max-height: 65vh;">
+						<img src="Liitteet/Lekatech/Drafts.jpg" alt="Drafts" style="max-height: 65vh">
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="content-field">
-		<div class="column">
-			<div class="content-field">
-				<h2>Process</h2>
-				<p>We started by studying all the key functions of the hammers and the environment UI was used on (excavator cabin). Not much user research was possible since the electric hammers didn’t exist on the market yet and therefore there were no pre-existing users and the project was confidential so we couldn’t share any information about it. We did manage to get some information from construction workers about hammering related things.</p>
-				<h3>Findings</h3>
-				<p style="margin-bottom: 0;">Excavator drivers often wear gloves, sometimes work in dark and the hammering is a pretty straight-forward routine procedure. That meant that the UI needed to...</p>
-				<ul>
-					<li>be visually clear and perceicable by one glance, easy to bring in to use</li>
-					<li>require mimimal clicks and be usable with gloves on</li>
-					<li>have dim colours so light of the screen won't dazzle the user</li>
-				</ul>
-				<h3>Prototyping</h3>
-				<p>The prototyping process was iterative, we made some wireframes first and then showed them to the customer, re-developed the necessary parts and then showed an updated version until the final UI was ready.</p>
-			</div>
-			<div class="column">
-				<div class="content-field" style="align-items: center;">
-					<img src="Liitteet/Lekatech/Drafts.jpg" alt="Drafts" style="max-height: 65vh">
-				</div>
-			</div>
-		</div>
+		<div class="divider" style="background-color: var(--lekatech-background)"></div>
 	</div>
 
 	
