--- a/vuorox.html
+++ b/vuorox.html
@@ -89,49 +89,56 @@
 				</div>
 			</div>
 		</div>
+		<svg class="svg">
+		  <clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clippath>
+		</svg>
+		<div class="divider"></div>
     </div>
 
 	
 	
 <!--BODY-->
-	<div  class="content-field">
-		<div class="column">
-			<div class="content-field">
-				<h2>Problem</h2>
-				<p>Pre-existing app customer presentented to us was visually unpolished and structurally unintuititive for users, especially for ones who are resistant to change and used to getting their workshifts on paper. To develop the app to the right direction, we started by interviewing nurses and finding out user priorities.</p>
-				<h3>What users wished from app</h3>
-				<ul>
-					<li>Easily perceivable by one glance. Minimum clicks required</li>
-					<li>Easy to use</li>
-					<li>Maximum possible control over own working shifts</li>
-					<li>Information about the next shift is first priority information, secondary are the other upcoming shifts and everything else is after that</li>
-				</ul>
-				<h3>Three main user types</h3>
-				<ul>
-					<li>Diginatives, usually younger workers with high expectations for apps</li>
-					<li>Workers resistant to change, usually experienced or elderly nurses who are mostly likely to complain in face of any difficulty using the app</li>
-					<li>Non-native finnish speakers</li>
-				</ul>
+	<div class="hero">
+		<div  class="content-field">
+			<div class="column">
+				<div class="content-field">
+					<h2>Problem</h2>
+					<p>Pre-existing app customer presentented to us was visually unpolished and structurally unintuititive for users, especially for ones who are resistant to change and used to getting their workshifts on paper. To develop the app to the right direction, we started by interviewing nurses and finding out user priorities.</p>
+					<h3>What users wished from app</h3>
+					<ul>
+						<li>Easily perceivable by one glance. Minimum clicks required</li>
+						<li>Easy to use</li>
+						<li>Maximum possible control over own working shifts</li>
+						<li>Information about the next shift is first priority information, secondary are the other upcoming shifts and everything else is after that</li>
+					</ul>
+					<h3>Three main user types</h3>
+					<ul>
+						<li>Diginatives, usually younger workers with high expectations for apps</li>
+						<li>Workers resistant to change, usually experienced or elderly nurses who are mostly likely to complain in face of any difficulty using the app</li>
+						<li>Non-native finnish speakers</li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="content-field">
-		<div class="column">
-			<div class="content-field">
-				<h2>Solution</h2>
-				<p>Based on our user research (semi-structured interviews) and some user data provided by the customer we mapped out three user flow scenarios and made a prototype of an ideal app based on them. Inclusivity was a priority in our design, for example all the color combinations were tested for being accessible.</p>
-				<h3>Design drivers</h3>
-				<ul>
-					<li>Giving (especially busy and stressed out) users a sense of control</li>
-					<li>Making the app easily perceivable by one glance</li>
-					<li>Considering different kinds of user needs (some tend to wish more shifts, some more freedays</li>
-					<li>Trustworthiness</li>
-				</ul>
-			</div>
-			<div class="content-field">
-				<img src="Liitteet/Vuorox/Vuo-kaavio.png" alt="User flows">
+		<div class="content-field">
+			<div class="column">
+				<div class="content-field">
+					<h2>Solution</h2>
+					<p>Based on our user research (semi-structured interviews) and some user data provided by the customer we mapped out three user flow scenarios and made a prototype of an ideal app based on them. Inclusivity was a priority in our design, for example all the color combinations were tested for being accessible.</p>
+					<h3>Design drivers</h3>
+					<ul>
+						<li>Giving (especially busy and stressed out) users a sense of control</li>
+						<li>Making the app easily perceivable by one glance</li>
+						<li>Considering different kinds of user needs (some tend to wish more shifts, some more freedays</li>
+						<li>Trustworthiness</li>
+					</ul>
+				</div>
+				<div class="content-field">
+					<img src="Liitteet/Vuorox/Vuo-kaavio.png" alt="User flows">
+				</div>
 			</div>
 		</div>
+		<div class="divider" style="background-color: var(--vuorox-background)"></div>
 	</div>
 	
 	<div class="hero darkmode">
