--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
 			</div>
 		</div>
 		<svg class="svg">
-		  <clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clippath>
+		  <clipPath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clipPath>
 		</svg>
 		<div class="divider"></div>
+		
+		
 	</div>
 	<div class="content-field" id="aboutme">
 		<div class="column">
