--- a/finnishdesigners.html
+++ b/finnishdesigners.html
@@ -103,9 +103,9 @@
 	
 	<div class="hero">
 		<div  class="content-field">
+			<h2>Problem</h2>
 			<div class="column">
 				<div class="content-field">
-					<h2>Problem</h2>
 					<p>Customer provided us user research data from questionaires and interviews from which we started to define the problem with the current website and user personas based on most common user types and their goals.</p>
 					<h3>Pain points related to the search engine</h3>
 					<ul>
@@ -119,6 +119,8 @@
 						<li>Veteran: an experienced designer who seeks to be part of community and affirm their status as a designer</li>
 						<li>Employer: Goal is to find a suitable worker quickly</li>
 					</ul>
+				</div>
+				<div class="content-field">
 					<h3>Finnish Designers' competition advantage</h3>
 					<p>Finnish Designers is a platfrom containing solely qualified designers because there is an application process for registeration, only designers with proper education or work experience can join. This makes it easy for employer to find suitable worker compared to other services such as Oikopolku or Duunitori that are not focused on designers nor check the qualifications of applicants. However, to make Finnish Designers attractive to employers, browsing through the website and especially the search engine needs to work seamlessly.</p>
 				</div>
