--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -39,11 +39,16 @@
 	
 	<div class="hero darkmode" style="background-color: var(--primary)">
 		<div class="content-field first">
-			<h1>Graphic design</h1>
-			<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
+			<div class="column">
+				<div class="content-field">
+					<h1>Graphic design</h1>
+					<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
+				</div>
+				<div class="content-field" style="width: 50%;"></div>
+			</div>
 		</div>
 		<svg class="svg">
-		  <clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.735,0.956 C0.911,0.971,1,0.549,1,0.549 V1 H0 V0 C0.322,0,0.474,0.935,0.735,0.956"></path></clippath>
+		  <clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.265,0.956 C0.089,0.971,0,0.549,0,0.549 V1 H1 V0 C0.678,0,0.526,0.935,0.265,0.956"></path></clippath>
 		</svg>
 		<div class="divider"></div>
 	</div>
