--- a/uxui.html
+++ b/uxui.html
@@ -40,9 +40,9 @@
 	<div class="content-field first">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
-			<a class="card darkmode" href="vuorox.html" style="background-color: var(--vuorox-background)">
+			<a class="card" href="vuorox.html">
 				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--white-superlight);">
+					<div class="pictureframe" style="background-color: var(--vuorox-background);">
 						<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox">
 					</div>
 				</div>
@@ -51,9 +51,9 @@
 					<p>An app where nurses can check and manage their work shifts.</p>
 				</div>
 			</a>
-			<a class="card darkmode" href="finnishdesigners.html" style="background-color: var(--finnishdesigners-background);">
+			<a class="card" href="finnishdesigners.html">
 				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--white-superlight);">
+					<div class="pictureframe" style="background-color: var(--finnishdesigners-background);">
 						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
 					</div>
 				</div>
@@ -64,9 +64,9 @@
 			</a>
 		</div>
 		<div class="column">
-			<a class="card darkmode" href="lekatech.html" style="background-color: var(--lekatech-background);">
+			<a class="card" href="lekatech.html">
 				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--white-superlight);">
+					<div class="pictureframe" style="background-color: var(--lekatech-background);">
 						<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
 					</div>
 				</div>
@@ -75,7 +75,7 @@
 					<p>UI for remote control electric breaker hammer.</p>
 				</div>
 			</a>
-			<div class="content-field"></div>
+			<div class="content-field" style="padding: 25px;"></div>
 		</div>
 	</div>
 	
