--- a/vuorox.html
+++ b/vuorox.html
@@ -98,11 +98,12 @@
 	
 	
 <!--BODY-->
+	
 	<div class="hero">
 		<div  class="content-field">
+			<h2>Problem</h2>
 			<div class="column">
 				<div class="content-field">
-					<h2>Problem</h2>
 					<p>Pre-existing app customer presentented to us was visually unpolished and structurally unintuititive for users, especially for ones who are resistant to change and used to getting their workshifts on paper. To develop the app to the right direction, we started by interviewing nurses and finding out user priorities.</p>
 					<h3>What users wished from app</h3>
 					<ul>
@@ -111,6 +112,8 @@
 						<li>Maximum possible control over own working shifts</li>
 						<li>Information about the next shift is first priority information, secondary are the other upcoming shifts and everything else is after that</li>
 					</ul>
+				</div>
+				<div class="content-field">
 					<h3>Three main user types</h3>
 					<ul>
 						<li>Diginatives, usually younger workers with high expectations for apps</li>
