--- a/uxui.html
+++ b/uxui.html
@@ -37,45 +37,43 @@
 	
 <!--BODY-->	
 	
+	<svg class="svg">
+		<clippath id="my-clip-path" clipPathUnits="objectBoundingBox"><path d="M0.265,0.044 C0.089,0.029,0,0.451,0,0.451 V0 H1 V1 C0.678,1,0.526,0.065,0.265,0.044"></path></clippath>
+	</svg>
+	
 	<div class="content-field first">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
 			<a class="card" href="vuorox.html">
-				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--vuorox-background);">
-						<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox">
-					</div>
+				<div class="content-field" style="background-color: var(--vuorox-background); height: 200px;">
+					<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox">
 				</div>
+				<div class="divider" style="background-color: var(--vuorox-background); height: 30px"></div>
 				<div class="content-field">
 					<h2>Vuorox</h2>
 					<p>An app where nurses can check and manage their work shifts.</p>
 				</div>
 			</a>
 			<a class="card" href="finnishdesigners.html">
-				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--finnishdesigners-background);">
-						<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
-					</div>
+				<div class="content-field" style=" background-color: var(--finnishdesigners-background); height: 200px;">
+					<img src="Liitteet/Finnishdesigners/Hero.png" alt="Finnishdesigners">
 				</div>
+				<div class="divider" style="background-color: var(--finnishdesigners-background); height: 30px"></div>
 				<div class="content-field">
 					<h2>Finnish Designers</h2>
 					<p>Portfolio platform and community for finnish designers.</p>
 				</div>
 			</a>
-		</div>
-		<div class="column">
 			<a class="card" href="lekatech.html">
-				<div class="content-field">
-					<div class="pictureframe" style="background-color: var(--lekatech-background);">
-						<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
-					</div>
+				<div class="content-field" style="background-color: var(--lekatech-background); height: 200px;">
+					<img src="Liitteet/Lekatech/Hero.png" alt="Lekatech">
 				</div>
+				<div class="divider" style="background-color: var(--lekatech-background); height: 30px"></div>
 				<div class="content-field">
 					<h2>Lekatech</h2>
 					<p>UI for remote control electric breaker hammer.</p>
 				</div>
 			</a>
-			<div class="content-field" style="padding: 25px;"></div>
 		</div>
 	</div>
 	
