--- a/finnishdesigners.html
+++ b/finnishdesigners.html
@@ -33,8 +33,8 @@
 	
 <!--NAVIGAATIO-->
 	
-	<header>
-		<div class="navbar darkmode">
+	<header class="darkmode">
+		<div class="navbar">
 			<a class="logo-container" href="index.html">Miro Eskelinen</a>
 			<input id="menu-toggle" type="checkbox"/>
 			<label class="hamburger-container" for="menu-toggle">
